# axon

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  __init__.py  app  axon_export.h  example.py  main.cpp  minimal_tensor_test.py  node  pyproject.toml  requirements.txt  setup.py  supr.supp  temp_transpose_test.py  tensor  test_bindings.py
.github/workflows/: ci.yml
axon/: functions.py
axon/axon_bindings/: c_function_signatures.py  c_wrapper_functions.py  ctypes_definitions.py
axon/core/: buffer.py  device.py  tensor.py
axon/data/: dataloader.py
axon/metrics/: nll_loss.py
axon/nn/: activations.py  init.py  linear.py  module.py  pipeline.py
axon/ops/: __init__.py  bop.py  mop.py  op.py  rop.py  uop.py
axon/optim/: adam.py  sgd.py
axon/utils/: __init__.py  device_management.py
bindings/: bindings.cpp
debug/: CMakeLists.txt  debug_tensor_cuda.cu
docs/: experiment.md  functions.md  index.md  pipeline.md  tensor.md
examples/: mnist.py  mnist_01.py  mnist_09.py  xor.py
experiments/: mnist_binary_classification_run_1.yaml  mnist_binary_classification_run_1_model.pkl  mnist_binary_classification_run_2.yaml  mnist_binary_classification_run_2_model.pkl  mnist_classification_run_1.yaml  mnist_classification_run_1_model.pkl  mnist_regression_run_1.yaml  mnist_regression_run_1_model.pkl  ua1893uae134.yaml
fajr/: functions.py
fajr/core/: buffer.py  tensor.py
fajr/data/: dataloader.py
fajr/fajr_bindings/: c_library_loader.py
fajr/metrics/: bce.py  mse.py  nll_loss.py
fajr/nn/: activations.py  conv.py  init.py  linear.py  module.py  pipeline.py
fajr/ops/: bop.py  mop.py  op.py  rop.py  uop.py
fajr/optim/: adam.py  optimizer.py  sgd.py
fajr/utils/: model_io.py
idrak/: __init__.py  experiment.py  functions.py
idrak/core/: __init__.py  buffer.py  node.py  tensor.py
idrak/data/: dataloader.py
idrak/idrak_bindings/: __init__.py  c_function_signatures.py  c_library_loader.py  c_wrapper_functions.py  ctypes_definitions.py
idrak/metrics/: __init__.py  bce.py  cce.py  mse.py  nll_loss.py
idrak/nn/: __init__.py  activations.py  conv.py  init.py  linear.py  module.py  pipeline.py  sequential.py
idrak/ops/: bop.py  iop.py  mop.py  op.py  rop.py  uop.py
idrak/optim/: adam.py  optimizer.py  sgd.py
idrak/utils/: model_io.py
include/: autograd.h  backend_registery.h  core_types.h  cuda_utils.h  dataloader.h  dataset.h  device_management.h  helpers.h  indexing.h  init.h  logger.h  node.h  ops.h  optimizers.h  shared_ptr.h  strided_indexer.h  tape.h  tensor.h  tensor_cpu.h  tensor_cuda.h  utils.h
include/autograd/: autograd.h  autograd_binary.h  autograd_movement.h  autograd_reduction.h  autograd_unary.h  autograd_utils.h  ops.h  tape.h
include/autograd/cpu/binary/: add.h  (+11 more)
include/autograd/cuda/: broadcast_utils.cuh
include/engine/: ops.h
include/ops/: binary_ops.h  binary_scalar_ops.h  init_ops.h  movement_ops.h  ops.h  ops_utils.h  reduction_ops.h  unary_ops.h
include/ops/cpu/: binary.h  binary_scalar.h  init.h  movement.h  reduction.h  unary.h
include/ops/cuda/: binary.h  binary_scalar.h  init.h  movement.h  reduction.h  unary.h
include/optimizers/: optimizers.h  zero_grad.h
include/utils/: indexing.cuh
models/: ffn_mnist_model.pkl
nawah/: CMakeLists.txt  Makefile  __init__.py  example.py  requirements.txt  setup.py
nawah/bindings/: bindings.cpp
nawah/include/: helpers.h  tensor.h
nawah/include/autograd/: badd.h  bmul.h  bsub.h  ops.h  tape.h
nawah/include/engine/: ops.h
nawah/nawah/: __init__.py
nawah/nawah_api/: __init__.py
nawah/src/: registery_backend.cpp  tensor.cpp
nawah/src/engine/: add.cpp  matmul.cpp  mean.cpp  mul.cpp  sub.cpp  sum.cpp
nawah/tests/: test_autograd.py  test_engine_ops.py  test_tensor.py
nawah_api/: __init__.py
nawah_api/python/api/: callbacks.py  config.py  pipeline.py  runner.py
nawah_api/python/core/: tensor.py
nawah_api/python/data/: dataset.py
nawah_api/python/nn/: __init__.py  activations.py  layers.py  loss.py  nn.py  sequential.py
nawah_api/python/optimizers/: __init__.py  adam.py  optim.py  sgd.py
py/: elnawah_bindings.py  functions.py  node.py  tensor.py
py/core/: node.py  tensor.py
py/elnawah_bindings/: __init__.py  c_function_signatures.py  c_library_loader.py  c_wrapper_functions.py  ctypes_definitions.py
py/idrak_bindings/: c_wrapper_functions.py
py/metrics/: bce.py  mse.py
py/nn/: conv.py  init.py  linear.py  module.py  sequential.py
py/ops/: __init__.py  base.py  bop.py  functions.py  lazy_base.py  lazy_ops.py  mop.py  op.py  rop.py  uop.py
py/optim/: adam.py  optimizer.py  sgd.py
src/: node.c  registery_backend.cpp  shared_ptr.c  tensor.c  tensor.cpp  tensor_cpu.c  tensor_cuda.cu  utils.c  utils.cu
src/autograd/: autograd_utils.c
src/autograd/cpu/: badd.cpp  bconv.cpp  bdiv.cpp  bexp.cpp  bflatten.cpp  binary_ops_grad_cpu.c  blog.cpp  bmatmul.cpp  bmean.cpp  bmul.cpp  bpow.cpp  brelu.cpp  bsub.cpp  bsum.cpp  movement_ops_grad_cpu.c  reduction_ops_grad_cpu.c  unary_ops_grad_cpu.c
src/autograd/cuda/: badd.cu  bconv.cu  bdiv.cu  bexp.cu  bflatten.cu  binary_ops_grad_cuda.cu  blog.cu  bmatmul.cu  bmean.cu  bmul.cu  bpow.cu  brelu.cu  bsub.cu  bsum.cu  movement_ops_grad_cuda.cu  reduction_ops_grad_cuda.cu  unary_ops_grad_cuda.cu
src/ops/: ops_utils.c
src/ops/cpu/: binary_ops_cpu.c  binary_ops_scalar_cpu.c  init_ops_cpu.c  movement_ops_cpu.c  reduction_ops_cpu.c  unary_ops_cpu.c
src/ops/cuda/: binary_ops_cuda.cu  binary_ops_scalar_cuda.cu  init_ops_cuda.cu  movement_ops_cuda.cu  reduction_ops_cuda.cu  unary_ops_cuda.cu
src/optimizers/: adam.c  sgd.c  zero_grad.c
src/optimizers/cpu/: adam.c  sgd.c  sgd.cpp  zero_grad.c  zero_grad.cpp
src/optimizers/cuda/: adam_cuda.cu  sgd.cu  sgd_cuda.cu  zero_grad.cu  zero_grad_cuda.cu
src/utils/cuda/: device_management.cu  indexing.cu
tests/: test_autograd.py  test_core.py  test_data.py  test_engine_ops.py  test_experiment.py  test_functions.py  test_lazy_ops.py  test_metrics.py  test_model_io.py  test_modules.py  test_nn.py  test_optim.py  test_tensor.py
(+252 files in other folders)
